[STAPLES] Alignment fixes

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/staples/ds_campaign.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/staples/ds_campaign.sass
@@ -578,6 +578,9 @@ body.page-node-722266
   
   div[role="main"]
     padding: 0 !important
+  
+  .panel-row-logos
+    width: 797px
 
 #staples_raise-your-hand
   width: 797px
@@ -662,7 +665,7 @@ body.page-node-722266
   .gallery
     position: absolute
     top: 630px
-    left: 458px
+    left: 468px
     width: 295px
     text-align: right
   
@@ -688,6 +691,9 @@ body.page-node-722266
 body.page-node-722952
   background-color: #494949 !important
   background-image: none !important
+  
+  .panel-row-logos
+    width: 797px
   
   div[role="main"]
     padding: 0 !important
@@ -974,6 +980,9 @@ body.page-node-722954
   div[role="main"]
     padding: 0 !important
   
+  .panel-row-logos
+    width: 797px
+  
   // for confirmation popup
   .ui-dialog
     overflow: visible
@@ -1126,7 +1135,7 @@ body.page-node-722954
 // staples logo for bottom of page
 #staples_sponsor_logo
   .pane-content
-    width: 797px
+    width: 100%
     padding: 0 10px
     font-size: 1.3em
     text-align: right
